--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,18 @@ os:
   - linux
   - osx
 julia:
-  - release
-  - nightly
+  - 0.5
+  - 0.6
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("IterableTables"); Pkg.test("IterableTables"; coverage=true)'
+branches:
+  only:
+  - master
+  - /release-.*/
+script:
+ - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'Pkg.clone("https://github.com/JuliaComputing/IndexedTables.jl.git")'
+  - julia -e 'Pkg.add("SimpleTraits"); Pkg.checkout("SimpleTraits")'
+ - julia -e 'Pkg.clone(pwd()); Pkg.build("IterableTables"); Pkg.test("IterableTables"; coverage=true)'
 after_success:
-  # push coverage results to Codecov
   - julia -e 'cd(Pkg.dir("IterableTables")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
