--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,6 @@ script:
   - julia -e 'Pkg.clone(pwd()); Pkg.build("IterableTables"); Pkg.test("IterableTables"; coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("IterableTables")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'Pkg.add("Documenter")'
+  - julia -e 'cd(Pkg.dir("IterableTables")); include(joinpath("docs", "make.jl"))'
+  
