--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ branches:
 addons:
   apt:
     packages:
-    - liblzma-dev
+      - xvfb
+      - xauth
+      - libgtk-3-0
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia -e 'Pkg.clone(pwd()); Pkg.build("IterableTables"); Pkg.test("IterableTables"; coverage=true)'
