--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ matrix:
   - julia: nightly
 after_success:
   - julia -e 'cd(Pkg.dir("IterableTables")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
-  - julia -e 'Pkg.add("Documenter")'
+  - julia -e 'ps=Pkg.PackageSpec(name="Documenter", version="0.19"); Pkg.add(ps); Pkg.pin(ps)'
   - julia -e 'cd(Pkg.dir("IterableTables")); include(joinpath("docs", "make.jl"))'
   
