--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,19 @@ branches:
   only:
   - master
   - /release-.*/
-  - /v(\d+)\.(\d+)\.(\d+)/   
+  - /v(\d+)\.(\d+)\.(\d+)/
 matrix:
   allow_failures:
   - julia: nightly
 after_success:
   - julia -e 'using Pkg; cd(Pkg.dir("IterableTables")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
-  - julia -e 'ps=Pkg.PackageSpec(name="Documenter", version="0.19"); Pkg.add(ps); Pkg.pin(ps)'
-  - julia -e 'cd(Pkg.dir("IterableTables")); include(joinpath("docs", "make.jl"))'
-  
+
+  jobs:
+  include:
+    - stage: "Documentation"
+      julia: 1.1
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
+        - julia --project=docs/ --color=yes docs/make.jl
+      after_success: skip
