--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "IterableTables"
 uuid = "1c8ee90f-4401-5389-894e-7a04a3dc0f4d"
-version = "1.0.0-DEV"
+version = "1.0.0"
 
 [deps]
 DataValues = "e7dc6d0d-1eca-5fa6-8ad6-5aecde8b7ea5"
